--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -189,7 +189,6 @@
               CREDITS
             </h2>
             <hr>
-            <br>
             <a href="http://www.medialab.sciences-po.fr" class="pull-right">
               <img src="../img/sciencespo_medialab.png" alt="Sciences Po medialab" style="width:200px;">
             </a>
@@ -208,7 +207,6 @@
               </a>
             </p>
             <br>
-            <br>
             <a href="http://chsp.sciences-po.fr" class="pull-right">
               <img src="../img/sciencespo_chsp.png" alt="Sciences Po chsp" style="width:200px;" class="invert">
             </a>
@@ -217,20 +215,17 @@
             <br>
             <br>
             <br>
-            <p class="links" style="text-align:right; font-weight:bold; float:right;">
-               <a href="https://twitter.com/ScPo_CHSP">@ScPo_CHSP</a>
+            <p style="text-align:right; font-weight:bold;">
+               <a style="text-align:right; font-weight:bold;" href="https://twitter.com/ScPo_CHSP">@ScPo_CHSP</a>
+            </p>
+            <br>
+            <p style="text-align:right; font-weight:bold;">
+              <a href="#team" class="portfolio-link" data-toggle="modal">Team's project</a>
             </p>
           </div>
         </div>
       </section>
       <center><a href="#touModal" class="portfolio-link" data-toggle="modal">legal notice</a></center>
-       <!-- <div class="container">
-       <div style="margin:auto;text-align:center; margin-top:20px;">
-         
-       <a href="" >Legal notice</a>
-       </div>
-       
-       </div> -->
        <!-- Terms of use Modal -->
     <div class="portfolio-modal modal fade" id="touModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
@@ -282,7 +277,7 @@
                             </p>
                             <h3>Industrial and Intellectual Property</h3>
                             <p>
-                                Except for explicitly licensed elements (Hyphe's software and website source codes), all information on this web site (text, photos, logos…) is protected by the copyrights held by Sciences Po or their partners.
+                                Except for explicitly licensed elements (website source codes), all information on this web site (text, photos, logos…) is protected by the copyrights held by Sciences Po or their partners.
                                 <br>
                                 Therefore, the information may not be reproduced, modified, republished, re-aired, translated, distributed or reused in any manner, without the written consent of Sciences Po.
                                 <br>
@@ -296,6 +291,50 @@
                             </p>
                             
                             <button type="button" class="btn btn-primary" data-dismiss="modal">Close legal notice</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="team" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h3>RICardo project's team</h3>
+                            <ul id="teamList">
+                                <li>
+                                    <a href="http://chsp.sciences-po.fr/chercheur-permanent/dedinger">Béatrice Dédinger</a>, chercheur en histoire
+                                </li>
+                                <li>
+                                    <a href="http://www.medialab.sciences-po.fr/fr/people/paul-girard/">Paul Girard</a>, directeur technique du Medialab
+                                </li>
+                                <li>
+                                    <a href="http://www.medialab.sciences-po.fr/fr/people/donato-ricci/">Donatto Ricci</a>, designer
+                                </li>
+                                <li>
+                                    <a href="http://www.medialab.sciences-po.fr/fr/people/mathieu-jacomy/">Matthieu Jacomy</a>, ingénieur
+                                </li>
+                                <li>
+                                    <a href="http://www.medialab.sciences-po.fr/fr/people/benjamin-ooghe-tabanou/">Benjamin Ooghr-Tabanou</a>, ingénieur
+                                </li>
+                                <li>
+                                    <a href="http://www.medialab.sciences-po.fr/fr/people/guillaume-plique/">Guillaume Plique</a>, développeur
+                                </li>
+                                <li>
+                                    <a href="http://www.medialab.sciences-po.fr/fr/people/gregory-tible/">Grégory Tible</a>, développeur
+                                </li>
+                            </ul>
+                            
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">Close team presentation</button>
                         </div>
                     </div>
                 </div>
