update views with refs to traductions

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -156,10 +156,10 @@
           A = reporting  /   B = partner
           </div>
           <div class="legend-item">
-          Exp A -> B = exports from A to B
+          Exp A -> B = exports {{ 'FROM' | translate }} A {{ 'TO' | translate }} B
           </div>
           <div class="legend-item">
-          ExpA = total exports of A
+          ExpA = total exports A
           </div> 
           </br>
           <div class="legend-item">
