--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -118,7 +118,7 @@
     <div class="col-md-12">
       <br>
       <br>
-      <h4>Comparison of {{entities.sourceEntity.selected.RICname}} and {{entities.targetEntity.selected.RICname}} trade statistics</h4>
+      <h4> {{ 'COMPARAISON_1' | translate }} {{entities.sourceEntity.selected.RICname}} {{ 'AND' | translate }} {{entities.targetEntity.selected.RICname}} {{ 'COMPARAISON_2' | translate }} </h4>
       <p class="paragraphViz">
         {{ 'COMPARISON_INTRO' | translate }}
       </p>
@@ -132,14 +132,14 @@
            <strong>A</strong> reporting : {{entities.sourceEntity.selected.RICname}} | <strong>B</strong> partner : {{entities.targetEntity.selected.RICname}}
            <br>
            <br>
-          <span class="legendImport">Imp A <-B </span> = country A imports from country B as reported by country A | <span class="legendExport">Imp B <-A </span> = country B imports from country A as reported by country B
+          <span class="legendImport">Imp A <-B </span> = {{ 'COMPARAISON_LEG_1' | translate }}  | <span class="legendExport">Imp B <-A </span> = {{ 'COMPARAISON_LEG_2' | translate }} 
           <br>
           <br>
-          <span class="legendImport">Exp B->A</span> = country B exports to country A as reported by country B | <span class="legendExport">Exp A->B</span> = country A exports to country B as reported by country A 
+          <span class="legendImport">Exp B->A</span> = {{ 'COMPARAISON_LEG_3' | translate }}  | <span class="legendExport">Exp A->B</span> = {{ 'COMPARAISON_LEG_4' | translate }} 
       </div>
       <div class="legend">
         <div class="legend-item" >
-        Mirror flows discrepancy
+          {{ 'MIRROR' | translate }}
           <div class="line diff-import" style="margin-left:20px;"></div>
           <strong>(Imp A <-B - Exp B->A) / Exp B->A</strong>
         </div>
