--- a/client/css/style.css
+++ b/client/css/style.css
@@ -170,6 +170,10 @@ body {
   color: white
 }
 
+#legal {
+  padding-top: 20pc;
+  font-size: 20px;
+}
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
@@ -354,6 +358,7 @@ li.storyline {
 .slTitle{
   font-family: 'montserrat';
   font-size: 16px;
+  color: #428bca;
 }
 
 .slPara {
@@ -390,6 +395,7 @@ li.storyline {
 
 #workingPaper {
   background-color: white;
+  padding-bottom: 30px;
 }
 
 /* 
@@ -733,6 +739,7 @@ h4{
 /* 
  * Legend 
  */
+
 .legend {
   margin-top: 15px;
 }
@@ -780,7 +787,9 @@ h4{
   color: #dbb994;
 }
 
-/* stream */
+/* 
+ * Stream 
+ */
 
 .stream-legend h4{
   font-variant: small-caps;
@@ -796,7 +805,9 @@ h4{
 .stream-legend .pat{
   text-align: right;
 }
-/* grid */
+/* 
+ * Grid 
+ */
 
 .grid-overlay-msg {
   position: absolute;
@@ -852,7 +863,9 @@ font-size: 1.1em;
   padding: 20px;
 }
 
-/* country */
+/* 
+ * Country 
+ */
 
 .filter-group {
   max-height: 60px;
