update team infos

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -307,25 +307,25 @@
                             <h3>RICardo project's team</h3>
                             <ul id="teamList">
                                 <li>
-                                    <a href="http://chsp.sciences-po.fr/chercheur-permanent/dedinger">Béatrice Dédinger</a>, chercheur en histoire
+                                    <a href="http://chsp.sciences-po.fr/chercheur-permanent/dedinger">Béatrice Dedinger</a>, Chercheur au Centre d'histoire de Sciences Po
                                 </li>
                                 <li>
-                                    <a href="http://www.medialab.sciences-po.fr/fr/people/paul-girard/">Paul Girard</a>, directeur technique du Medialab
+                                    <a href="http://www.medialab.sciences-po.fr/fr/people/paul-girard/">Paul Girard</a>, directeur technique du Medialab de Sciences Po
                                 </li>
                                 <li>
-                                    <a href="http://www.medialab.sciences-po.fr/fr/people/donato-ricci/">Donatto Ricci</a>, designer
+                                    <a href="http://www.medialab.sciences-po.fr/fr/people/donato-ricci/">Donatto Ricci</a>, designer au Medialab de Sciences Po
                                 </li>
                                 <li>
-                                    <a href="http://www.medialab.sciences-po.fr/fr/people/mathieu-jacomy/">Matthieu Jacomy</a>, ingénieur
+                                    <a href="http://www.medialab.sciences-po.fr/fr/people/mathieu-jacomy/">Matthieu Jacomy</a>, ingénieur au Medialab de Sciences Po
                                 </li>
                                 <li>
-                                    <a href="http://www.medialab.sciences-po.fr/fr/people/benjamin-ooghe-tabanou/">Benjamin Ooghr-Tabanou</a>, ingénieur
+                                    <a href="http://www.medialab.sciences-po.fr/fr/people/benjamin-ooghe-tabanou/">Benjamin Ooghr-Tabanou</a>, ingénieur au Medialab de Sciences Po
                                 </li>
                                 <li>
-                                    <a href="http://www.medialab.sciences-po.fr/fr/people/guillaume-plique/">Guillaume Plique</a>, développeur
+                                    <a href="http://www.medialab.sciences-po.fr/fr/people/guillaume-plique/">Guillaume Plique</a>, développeur au Medialab de Sciences Po
                                 </li>
                                 <li>
-                                    <a href="http://www.medialab.sciences-po.fr/fr/people/gregory-tible/">Grégory Tible</a>, développeur
+                                    <a href="http://www.medialab.sciences-po.fr/fr/people/gregory-tible/">Grégory Tible</a>, développeur au Medialab de Sciences Po
                                 </li>
                             </ul>
                             
