update home & country content

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -6,7 +6,7 @@
       <img ng-src="../img/ricepaper_v3.png" id="backHomeImage"/>
       <div>
         <h2 id="imgTitle">The RICardo Project</h2>
-        <p id="imgSubtitle">Trade between Nations from ~1800 to 1938</p>
+        <p id="imgSubtitle">Trade between Nations from c. 1800 to 1938</p>
       </div>
     </div>
     <div class="container">
