update network view

--- a/client/partials/network.html
+++ b/client/partials/network.html
@@ -15,22 +15,26 @@
 			 <button type="button" class="btn" ng-click="stopLayout()">
 			 	Stop Layout
 			 </button>
-			 <button type="button" class="btn" ng-click="snapshot()">
+			 <button type="button" class="btn" ng-click="snapshot()" style="float:right;">
 			 	Snapshot
 			 </button>
 			<div id="network">
 				
 			</div>
-			<div class="col-md-6">
-				<button type="button" class="btn" ng-click="zoom()">
-			 	Zoom
-			 </button>
+			<center style="margin-top:20px;">
 			 <button type="button" class="btn" ng-click="unzoom()">
 			 	Unzoom
 			 </button>
 			 <button type="button" class="btn" ng-click="rescale()">
 			 	Rescale
 			 </button>
+			 <button type="button" class="btn" ng-click="zoom()">
+			 	Zoom
+			 </button>
+			</center> 
+			<div class="col-md-12">
+				<h2>List of partner</h2>
+				
 			</div>
 		</div>
 	</div>
