--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,6 +1,5 @@
 <div class="view-page">
   <div top-menu class="row">
-    
   </div>
     <div id="homeImage" class="row">
       <img ng-src="../img/ricepaper_v3.png" id="backHomeImage"/>
@@ -15,14 +14,13 @@
       </div>
       <div class="row workingPaperContainer">
         <div class="spaceBetweenParagraphs noFloat">&bull;</div>
-        <div class="col-md-6"> 
+        <div class="col-xs-6 col-md-6"> 
           {{ 'COLUMN1' | translate }}
           <a href="https://data.imf.org/">data.imf.org</a>
           {{ 'COLUMN1_LINK' | translate }}
           <a href="http://comtrade.un.org/">comtrade.un.org</a>
-
         </div>
-        <div class="col-md-6"> 
+        <div class="col-xs-6 col-md-6"> 
           {{ 'COLUMN2' | translate }}
           <a href="mailto:beatrice.dedinger@siencespo.fr">beatrice.dedinger@siencespo.fr</a>
         </div>
@@ -34,7 +32,7 @@
     <div id="workingPaper">
       <div class="container">
         <div class="row workingPaperContainer">
-          <div class="col-md-12">
+          <div class="col-xs-6 col-md-12">
             <p>{{ 'WORKING_PAPER_1' | translate }} <a href="http://dh2016.adho.org/">Digital Humanities 2016</a>.
             </p>
 
@@ -42,7 +40,7 @@
             
           </div>
           
-            <div class="col-md-6 workingPaper">
+            <div class="col-xs-6 col-md-6 workingPaper">
               <h4>Abstract DH2016</h4>
               <ul>
                 <li>
@@ -53,7 +51,7 @@
                 </li> 
               </ul>
             </div>
-            <div class="col-md-6 workingPaper">
+            <div class="col-xs-6 col-md-6 workingPaper">
               <h4>Historical Methods</h4>
               <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf">Working paper historical methods (en) </a>
             </div>
@@ -337,7 +335,4 @@
         </div>
     </div>
   </div>
-<!--   </div> -->
-<!--   <div class="row noFloat" footer/>
-</div>
- -->
+
