--- a/client/partials/network.html
+++ b/client/partials/network.html
@@ -15,6 +15,12 @@
 			 <button type="button" class="btn" ng-click="stopLayout()">
 			 	Stop Layout
 			 </button>
+			 <button type="button" class="btn" ng-click="exp()">
+			 	Show export trade values
+			 </button>
+			 <button type="button" class="btn" ng-click="exp()">
+			 	Show import trade values
+			 </button>
 			 <button type="button" class="btn" ng-click="snapshot()" style="float:right;">
 			 	Snapshot
 			 </button>
