--- a/client/partials/network.html
+++ b/client/partials/network.html
@@ -7,40 +7,73 @@
 			</h2>
 			<p>
 				Choose a year to display a network of trade between nations.
-				Size of network depends of reportings nulber for the year. For more information see world view.
+				Size of network depends of reportings number for the year. For more information see world view.
 			</p>
 			 <button type="button" class="btn" ng-click="startLayout()">
-			 	Start Layout
+			 	<span class="glyphicon glyphicon-play" aria-hidden="true"></span> Start Layout
 			 </button>
 			 <button type="button" class="btn" ng-click="stopLayout()">
-			 	Stop Layout
+			 	<span class="glyphicon glyphicon-stop" aria-hidden="true"></span> Stop Layout
 			 </button>
-			 <button type="button" class="btn" ng-click="exp()">
+			 <!-- <button type="button" class="btn" ng-click="exp()">
 			 	Show export trade values
 			 </button>
 			 <button type="button" class="btn" ng-click="exp()">
 			 	Show import trade values
-			 </button>
+			 </button> -->
 			 <button type="button" class="btn" ng-click="snapshot()" style="float:right;">
-			 	Snapshot
+			 	<span class="glyphicon glyphicon-picture" aria-hidden="true"></span> Snapshot
 			 </button>
 			<div id="network">
 				
 			</div>
 			<center style="margin-top:20px;">
 			 <button type="button" class="btn" ng-click="unzoom()">
+			 	<span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
+			 	<br/>
 			 	Unzoom
 			 </button>
 			 <button type="button" class="btn" ng-click="rescale()">
+			 	<span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+			 	<br/>
 			 	Rescale
 			 </button>
 			 <button type="button" class="btn" ng-click="zoom()">
+			 	<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+			 	<br/>
 			 	Zoom
 			 </button>
 			</center> 
 			<div class="col-md-12">
-				<h2>List of partner</h2>
-				
+				<div class="row">
+					<div id="control-pane">
+					    <h2 class="underline">Filters node to show on the graph</h2>
+					    <div class="col-md-6">
+					      <h3>min degree <span id="min-degree-val">0</span></h3>
+					      0 <input id="min-degree" type="range" min="0" max="0" value="0"> <span id="max-degree-value">0</span><br>
+					    </div>
+					    <div class="col-md-6">
+					      <h3>node category</h3>
+					      <select id="node-category">
+					        <option value="" selected>All categories</option>
+					      </select>
+					    </div>
+					    <span class="line"></span>
+					    <div>
+					      <button id="reset-btn">Reset filters</button>
+					      <button id="export-btn">Export</button>
+					    </div>
+					    <div id="dump" class="hidden"></div>
+					</div>
+				</div>
+				<h2>List of neighboors of node selected : </h2>
+				<div class="col-md-12">
+					<ul>
+						<li class="col-md-4" ng-repeat="item in listNations" ng-click="showNodeOnGraph(item)" ng-mouseover="">
+						    {{item.community}} : {{item.id}}
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
